# ce512-fem-lab

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EDITABLE_TARGETS.html  LICENSE  README.md  TODO_DYNAMICS_PERIODIC.md  api.html  benchmark_cantilever.py  benchmark_seismic.py  genindex.html  index.html  matlab_python_mapping.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tutorials.html
.doctrees/: EDITABLE_TARGETS.doctree  api.doctree  environment.pickle  index.doctree  matlab_python_mapping.doctree  tutorials.doctree
.doctrees/manual/: ch01_fundamentals.doctree  ch02_elements.doctree  ch03_assembly_statics.doctree  ch04_materials.doctree  ch05_dynamics.doctree  ch06_periodic_io.doctree  ch07_advanced_examples.doctree  ch08_custom_elements.doctree  ch09_dynamic_workflows.doctree  index.doctree
.doctrees/theory/: 01_core_assembly.doctree  02_boundary_loads.doctree  03_1d_bars.doctree  04_2d_triangles.doctree  05_2d_quads.doctree  06_3d_solids.doctree  07_plasticity.doctree  08_dynamics.doctree  09_modal_periodic.doctree  10_io_mesh.doctree  11_nonlinear_solvers.doctree  12_plotting_postprocessing.doctree  13_legacy_wrappers.doctree  index.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
_sources/: api.rst.txt  index.md.txt
_sources/manual/: ch01_fundamentals.md.txt  ch03_assembly_statics.md.txt  ch05_dynamics.md.txt  ch06_periodic_io.md.txt  ch08_custom_elements.md.txt  ch09_dynamic_workflows.md.txt  index.md.txt
_sources/theory/: 01_core_assembly.md.txt  07_plasticity.md.txt  09_modal_periodic.md.txt  10_io_mesh.md.txt
benchmarks/matlab_regression/: README.md  manifest.json  pairwise_comparison.tsv  summary_runs.tsv
benchmarks/matlab_regression/inputs/flow_q4/: C.tsv
benchmarks/matlab_regression/plots/: runtime_by_solver.tex  runtime_plot.tsv  stress_diff_plot.tsv  stress_diff_vs_baseline.tex  u_diff_plot.tsv  u_diff_vs_baseline.tex
benchmarks/matlab_regression/raw/python/bar01_nlbar/: E.tsv  F_path.tsv  R.tsv  U_path.tsv  f.tsv  q.tsv  u.tsv
benchmarks/matlab_regression/raw/python/bar02_nlbar/: F_path.tsv  R.tsv  S.tsv  U_path.tsv  f.tsv  q.tsv  u.tsv
benchmarks/matlab_regression/raw/python/cantilever_q4/: E.tsv  R.tsv  S.tsv  q.tsv  u.tsv
benchmarks/matlab_regression/raw/python/flow_q4/: E.tsv  R.tsv  S.tsv  q.tsv  u.tsv
benchmarks/matlab_regression/raw/python/flow_t3/: E.tsv  R.tsv  S.tsv  q.tsv  u.tsv
benchmarks/matlab_regression/raw/python/gmsh_triangle_t3/: E.tsv  R.tsv  S.tsv  q.tsv  u.tsv
benchmarks/matlab_regression/raw/python/hole_plastpe/: E.tsv  F_path.tsv  R.tsv  S.tsv  U_path.tsv  f.tsv  q.tsv  u.tsv
benchmarks/matlab_regression/raw/python/hole_plastps/: E.tsv  F_path.tsv  R.tsv  S.tsv  U_path.tsv  f.tsv  q.tsv  u.tsv
benchmarks/matlab_regression/raw/python/square_plastpe/: E.tsv  F_path.tsv  R.tsv  S.tsv  U_path.tsv  f.tsv  q.tsv  u.tsv
course/HW1/: main.tex  solution.tex
course/HW2/: compute_hw2.py  data_buckling_zoom.tsv  data_loaddisplacement.tsv  data_pushover.tsv  data_timehistory.tsv  data_validation_opensees.tsv  main.tex  results.txt  solution.tex  validate_opensees.py
course/HW3/: HW3.tex  book_part.tex  compute_hw3.py  rayleigh_ritz_convergence.jl  rayleigh_ritz_scaling.jl  solution.tex  validate_femlab.py  validate_opensees.py
docs/: index.md  matlab_python_mapping.md
docs/assets/comparison/: parity_metrics.json
docs/manual/: ch02_elements.md  ch04_materials.md  ch05_dynamics.md  ch06_periodic_io.md  ch09_dynamic_workflows.md
docs/theory/: 02_boundary_loads.md  03_1d_bars.md  04_2d_triangles.md  05_2d_quads.md  06_3d_solids.md  08_dynamics.md  11_nonlinear_solvers.md  12_plotting_postprocessing.md  13_legacy_wrappers.md  index.md
manual/: ch01_fundamentals.html  ch02_elements.html  ch03_assembly_statics.html  ch04_materials.html  ch05_dynamics.html  ch06_periodic_io.html  ch07_advanced_examples.html  ch08_custom_elements.html  ch09_dynamic_workflows.html  index.html
scripts/: generate_parity_artifacts.py  generate_solver_comparison.py
scripts/matlab/: run_solver_case.m
scripts/scilab/: run_cantilever.sce  run_triangle_from_csv.sce
src/femlab/: __init__.py  _helpers.py  assembly.py  boundary.py  core.py  loads.py  plotting.py  postprocess.py  types.py
src/femlab/elements/: __init__.py  bars.py  quads.py  solids.py  triangles.py
src/femlab/examples/: __init__.py  cantilever.py  flow.py  gmsh_triangle.py
src/femlab/io/: __init__.py  gmsh.py
src/femlab/materials/: __init__.py  invariants.py  plasticity.py
src/femlabpy/: __init__.py  __main__.py  _helpers.py  assembly.py  boundary.py  compat.py  core.py  damping.py  dynamics.py  loads.py  matlab.py  modal.py  periodic.py  plotting.py  postprocess.py  solvers.py  types.py
src/femlabpy/data/: __init__.py
src/femlabpy/elements/: __init__.py  bars.py  quads.py  solids.py  triangles.py
src/femlabpy/examples/: __init__.py  cantilever.py  dynamic_cantilever.py  dynamic_sdof.py  dynamic_wave.py  ex_lag_mult.py  flow.py  gmsh_triangle.py  legacy_cases.py  periodic_rve.py  periodic_shear.py
src/femlabpy/gui/: __main__.py  app.py  model.py  panels.py  solver_bridge.py  viewport.py
src/femlabpy/io/: gmsh.py
src/femlabpy/materials/: __init__.py  invariants.py  plasticity.py
tests/: test_bars_extended.py  test_boundary_loads.py  test_damping.py  test_dynamics_extra.py  test_examples.py  test_gmsh_parity.py  test_lagrange_example.py  test_legacy_examples.py  test_mass_matrices.py  test_matlab_api.py  test_modal.py  test_newmark.py  test_periodic.py  test_quads_extended.py  test_solids.py  test_solids_extended.py  test_triangles_extended.py
theory/: 01_core_assembly.html  02_boundary_loads.html  03_1d_bars.html  04_2d_triangles.html  05_2d_quads.html  06_3d_solids.html  07_plasticity.html  08_dynamics.html  09_modal_periodic.html  10_io_mesh.html  11_nonlinear_solvers.html  12_plotting_postprocessing.html  13_legacy_wrappers.html  index.html
(+17 files in other folders)
