[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "femlab-python"
version = "0.1.0"
description = "Python port of the Scilab FemLab wrapper and the original MATLAB teaching toolbox."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Muhammet Yagcioglu" },
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
